--- a/SeñorDeMuruhuay/gravestone-shop/src/index.html
+++ b/SeñorDeMuruhuay/gravestone-shop/src/index.html
@@ -15,8 +15,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#models">Modelos</a></li>
+                    <li><a href="#lapidas">Lapidas</a></li>
+                    <li><a href="#tumbas">Tumbas</a></li>
+                    <li><a href="#Páginas">Páginas</a></li>
                     <li><a href="#contact">Contacto</a></li>
+
+
                 </ul>
             </nav>
         </div>
@@ -40,33 +44,10 @@
                 </p>
             </div>
         </section>
+<main>
+    <div id="sections-container"></div>
+</main>
 
-        <section id="models">
-            <h2 class="models-title">Modelos de Lápidas</h2>
-            <div id="filters-bar">
-                <div class="filter-group">
-                    <label for="material">
-                        <span class="filter-icon">⛼</span>
-                        Material
-                    </label>
-                    <select id="material"></select>
-                </div>
-                <div class="filter-group">
-                    <label for="price-range">
-                        <span class="filter-icon">💰</span>
-                        Precio
-                    </label>
-                    <select id="price-range">
-                        <option value="all">Todos</option>
-                        <option value="0-1000">Hasta S/ 1000</option>
-                        <option value="1001-1500">S/ 1001 - S/ 1500</option>
-                        <option value="1501-2000">S/ 1501 - S/ 2000</option>
-                        <option value="2001-99999">Más de S/ 2000</option>
-                    </select>
-                </div>
-            </div>
-            <div id="model-list"></div>
-        </section>
 
         <section id="contact" class="contact-section fade-in">
             <h2>Contacto</h2>
@@ -82,7 +63,7 @@
                 </a>
                 <div class="store-info">
                     <strong>Visítanos:</strong><br>
-                    Jr. Ejemplo 123, Lima, Perú<br>
+                    Al costado del cementerio de Chupaca, Perú<br>
                     <span style="color:#b6b6b6;">(Lunes a Domingo, 7am - 6pm)</span>
                 </div>
             </div>
