--- a/SeñorDeMuruhuay/gravestone-shop/src/index.html
+++ b/SeñorDeMuruhuay/gravestone-shop/src/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#lapidas">Lapidas</a></li>
                     <li><a href="#tumbas">Tumbas</a></li>
                     <li><a href="#Páginas">Páginas</a></li>
+                    <li><a href="#Fotos">Fotos</a></li>
                     <li><a href="#contact">Contacto</a></li>
 
 
