--- a/SeñorDeMuruhuay/gravestone-shop/src/index.html
+++ b/SeñorDeMuruhuay/gravestone-shop/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Lápidas</title>
+    <title>Marmolería Señor de Muruhuay</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -32,11 +32,11 @@
             <div class="hub-content">
                 <h1>Bienvenido a Marmolería Señor de Muruhuay</h1>
                 <p>
-                    Somos una empresa peruana con años de experiencia en la elaboración de lápidas y trabajos en mármol, granito y piedra. Nos especializamos en ofrecer productos de alta calidad, personalizados y con acabados profesionales para honrar la memoria de sus seres queridos.
+                    Somos una empresa peruana con años de experiencia en la elaboración de lápidas, tumbas, diseños y trabajos en mármol, granito, cuarzo y porcelanato. Nos especializamos en ofrecer productos de alta calidad, personalizados y con acabados profesionales para honrar la memoria de sus seres queridos.
                 </p>
                 <ul class="hub-list">
                     <li>Modelos exclusivos y personalizados</li>
-                    <li>Materiales de primera calidad: granito, mármol y piedra</li>
+                    <li>Materiales de primera calidad: granito, mármol, cuarzo y porcelanato</li>
                     <li>Asesoría y atención personalizada</li>
                     <li>Entrega puntual y garantía en cada trabajo</li>
                 </ul>
