--- a/SeñorDeMuruhuay/gravestone-shop/src/index.html
+++ b/SeñorDeMuruhuay/gravestone-shop/src/index.html
@@ -77,9 +77,10 @@
 
 
     <div id="lightbox" class="lightbox">
-        <span class="lightbox-close" id="lightbox-close">&times;</span>
-        <img class="lightbox-img" id="lightbox-img" src="" alt="Modelo ampliado">
-    </div>
+  <span id="lightbox-close" class="lightbox-close">&times;</span>
+  <img id="lightbox-img" class="lightbox-img" src="" alt="Zoom">
+  <div id="lightbox-actions"></div>
+</div>
 
     <script src="scripts/main.js"></script>
 </body>
